# CPMULTI

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Headers/: CannyBorderDetection.hpp  CannyFilter.hpp  DenoisingFilter.hpp  FaceDetection.hpp  FourierFilter.hpp  GaussianFilter.hpp  GreyScaleFilter.hpp  KeyHandler.hpp  MedianFilter.hpp  Menu.hpp  MultiThreadImageProcessor.hpp  PerformanceMetrics.hpp  PerformanceVisualization.hpp  ResizeRotateFilter.hpp  SobelFilter.hpp  WebcamOperations.hpp
Sources/: CannyBorderDetection.cpp  CannyFilter.cpp  DenoisingFilter.cpp  FaceDetection.cpp  FourierFilter.cpp  GaussianFilter.cpp  GreyScaleFilter.cpp  KeyHandler.cpp  MedianFilter.cpp  Menu.cpp  MultiThreadImageProcessor.cpp  PerformanceMetrics.cpp  PerformanceVisualization.cpp  ResizeRotateFilter.cpp  SobelFilter.cpp  WebcamOperations.cpp
